--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@vitejs/plugin-react-refresh": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2",
+    "styled-components": "^5.3.3",
     "vite": "^2.3.8"
   }
 }
