--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@types/react": "^17.0.13",
@@ -17,5 +19,9 @@
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "vite": "^2.3.8"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  },
+  "homepage" : "http://Geun-Oh.github.io/Music-List"
 }
