vite는 빌드가 어려운 것 같다..왜그럴까 그냥 소스만 가지고 휴가 나가서 전부 업로드 해야할 것 같다

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
