--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "vite": "^2.3.8"
   },
